syntax = "proto3";

option csharp_namespace = "Sms.Api";

package sms;

service SmsProto {
  rpc SendVerification (SendVerificationRequest) returns (VoidOperationReply);
}

message SendVerificationRequest {
  string phone = 2;
}

message VoidOperationReply {
}
